k8s/overlays/prod/gridcapa-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gridcapa
  labels:
    app: gridcapa
    component: gridcapa
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/cse/d2cc$ /cse/d2cc/ permanent;
      proxy_set_header X-Forwarded-Prefix /cse/d2cc/;
      proxy_set_header userId "johnDoe";
    nginx.ingress.kubernetes.io/server-snippet: |
      merge_slashes off;
spec:
  rules:
    - host: gridcapa.farao-community.com
      http:
        paths:
          - path: /cse/d2cc(/|$)(.*)
            backend:
              serviceName: gridcapa-app
              servicePort: 80
          - path: /cse/d2cc/config(/|$)(.*)
            backend:
              serviceName: config-server
              servicePort: 80
          - path: /cse/d2cc/config-notification(/|$)(.*)
            backend:
              serviceName: config-notification-server
              servicePort: 80
          - path: /apps-metadata(/|$)(.*)
            backend:
              serviceName: apps-metadata-server
              servicePort: 80
          - path: /()(minio.*)
            backend:
              serviceName: gridcapa-minio
              servicePort: 9000
